--- a/2022-09-20-Convegno_USB.html
+++ b/2022-09-20-Convegno_USB.html
@@ -329,8 +329,8 @@
 <h1>Salari ed Inquadramenti</h1>
 
 </section>
-<section id="section" class="slide level2 smaller center">
-<h2></h2>
+<section id="salari-ed-inquadramenti-1" class="slide level2 smaller center">
+<h2>SALARI ED INQUADRAMENTI</h2>
 <table>
 <colgroup>
 <col style="width: 46%">
@@ -363,8 +363,8 @@
 </tbody>
 </table>
 </section>
-<section id="section-1" class="slide level2 smaller center">
-<h2></h2>
+<section id="futuro-buio" class="slide level2 smaller center">
+<h2>Futuro Buio</h2>
 <ul>
 <li class="fragment"><p><strong>PNNR2</strong> : dimezzamento assegni di ricerca erogabili, il resto diventano borse oppure spostare il personale sulla ricerca privata finanziata</p></li>
 <li class="fragment"><p><strong>IMPATTO</strong>: demansionamento e perdita di salario, perdita di personale qualificato</p></li>
@@ -384,8 +384,8 @@
 <h1>Piano di Rilancio CNR</h1>
 
 </section>
-<section id="section-2" class="slide level2 smaller center">
-<h2></h2>
+<section id="piano-rilancio-cnr" class="slide level2 smaller center">
+<h2>Piano Rilancio CNR</h2>
 <ul>
 <li class="fragment"><p>Non trasparente.</p></li>
 <li class="fragment"><p>Un percorso partecipato <strong>non è</strong> scegliere il nome di una nave o un logo</p></li>
