--- a/2022-09-20-Convegno_USB.html
+++ b/2022-09-20-Convegno_USB.html
@@ -318,9 +318,9 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-image="img/copertina01.jpg" data-background-size="cover" class="center">
+<section id="title-slide" data-background-image="img/scudo_16.png" data-background-size="cover" class="center">
   <h1 class="title">Situazione CNR</h1>
-  <p class="institute">Direttivo USB CNR</p>
+  <p class="institute"><br> <br> <br> <br> <br> <br> Direttivo USB CNR</p>
   <p class="date">2022-09-20</p>
 </section>
 
@@ -347,13 +347,13 @@
 <tbody>
 <tr class="odd">
 <td>art. 22, comma 15 dlgs 75/2017</td>
-<td>valorizzazione professionalità interne</td>
+<td>Valorizzazione professionalità interne</td>
 <td>582 domande 105 posti <strong>Sottoinquadramento</strong></td>
 </tr>
 <tr class="even">
 <td>ex art. 15</td>
-<td>carriera</td>
-<td>formalmente approvato scorrimento circa 800 persone. <strong>Molti in pensioni o prossimi.</strong></td>
+<td>Carriera</td>
+<td>Formalmente approvato scorrimento 800 persone. <strong>Molti in pensioni o prossimi.</strong> Alcuni se accettano perdono salario, passando da tecnico a tecnologo.</td>
 </tr>
 <tr class="odd">
 <td>art 20 comma2 dlgs 75/2017, comma 669 legge 205/2017, Direttiva 99/70/CE</td>
@@ -387,15 +387,15 @@
 <section id="piano-rilancio-cnr" class="slide level2 smaller center">
 <h2>Piano Rilancio CNR</h2>
 <ul>
-<li class="fragment"><p>Non trasparente.</p></li>
+<li class="fragment"><p>Non trasparente</p></li>
 <li class="fragment"><p>Un percorso partecipato <strong>non è</strong> scegliere il nome di una nave o un logo</p></li>
-<li class="fragment"><p>Diversi Istituti CNR hanno competenze ad hoc <a href="https://www.istc.cnr.it/en/content/manuale-di-progettazione-partecipata-con-i-bambini-e-le-bambine">ISTC</a>, <a href="https://www.issirfa.cnr.it/attivita-di-ricerca/progetti-conclusi/progetto-percorsi/">ISSIFRA</a></p></li>
+<li class="fragment"><p>Diversi Istituti CNR hanno competenze ad hoc <a href="https://www.istc.cnr.it/en/content/manuale-di-progettazione-partecipata-con-i-bambini-e-le-bambine">ISTC</a>, <a href="https://www.issirfa.cnr.it/attivita-di-ricerca/progetti-conclusi/progetto-percorsi/">ISSIFRA</a> che non sono state riconosciute</p></li>
 <li class="fragment"><p><strong>Voci</strong>: bocciatura dai revisori dei conti in particolare il revisore MEF</p></li>
 <li class="fragment"><p>Meccanismi peggiorativi su reclutamento sulla falsa riga di PNNR2</p></li>
-<li class="fragment"><p>Amministrazione su scala regionale fuori dagli istituti:</p>
+<li class="fragment"><p>Aggiunta di uno strato amministrativo intermedio tra istituti e centrale, <strong>i provveditorati</strong>, dislocati sul territorio nazionale:</p>
 <ul>
 <li class="fragment">Molti istituti sono in più regioni</li>
-<li class="fragment">Livello intermedio che potrebbe dare interpretazioni diverse</li>
+<li class="fragment">E se i diversi provveditorati generassero dei conflitti interpretativi e delle difformità amministrative?</li>
 <li class="fragment">Es. IAC Roma (Lazio-Toscana) vs IAC Bari (Puglia-Basilicata)</li>
 </ul></li>
 </ul>
