--- a/2022-09-20-Convegno_USB.html
+++ b/2022-09-20-Convegno_USB.html
@@ -399,6 +399,21 @@
 <li class="fragment">Es. IAC Roma (Lazio-Toscana) vs IAC Bari (Puglia-Basilicata)</li>
 </ul></li>
 </ul>
+</section></section>
+<section>
+<section id="questione-di-generi-e-sostenibilità" class="title-slide slide level1 center" data-background="img/decreto_inclusione_41.jpg" data-background-size="contain" data-background-repeat="no-repeat">
+<h1>Questione di Generi e Sostenibilità</h1>
+
+</section>
+<section id="a-che-punto-siamo" class="slide level2 smaller center">
+<h2>A che punto siamo?</h2>
+<ul>
+<li class="fragment"><p>Gli unici numeri visibili <a href="https://www.cnr.it/it/cnr-in-numeri">CNR IN NUMERI</a> (53.5% Uomini e 46.5% Donne) non descrivono i dettagli né la sensazione diffusa</p></li>
+<li class="fragment"><p>Nulla sui i vari livelli e le direzioni di istituto?</p></li>
+<li class="fragment"><p>Inoltre l’unica statistica non è in linea con i <a href="https://www.undp.org/sustainable-development-goals">Sustainable Development Goals</a> dell’ONU cui formalmente il CNR <a href="https://www.outreach.cnr.it/risorsa/153/sviluppo-sostenibile-apriamo-lagenda-2030-dellonu">aderisce</a> che nel goal 16 recitano : <em>… accountable and inclusive institutiuons at all levels</em></p></li>
+<li class="fragment"><p>In realtà non è reperibile un documento che attesti l’azione interna del CNR in merito a questi punti</p></li>
+<li class="fragment"><p>E’ il personale che stimola l’ente : progetto europeo <a href="https://www.irpps.cnr.it/mind-the-geps/">MindTheGeps</a> cui partecipa IRPPS. Gen-Feb 2022: <em>Questionario verso un piano di genere: comportamenti ed opinioni del personale CNR</em></p></li>
+</ul>
 <div class="footer footer-default">
 <p>Convegno USB Criticità Enti Pubblici</p>
 </div>
