--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "3; url =2022-09-20_Covegno_USB_EPR.html" />
-   </head>
-   <body>
-      <p>Redirecting to another URL</p>
-   </body>
-</html>
+2022-09-20-Convegno_USB.html
